# virgil

./: CMakeLists.txt
src/: main.cpp
src/config/: Config.h  Consts.h
src/entities/background/: Background.cpp  Background.h
src/entities/button/: Button.cpp  Button.h
src/entities/sprite/: Sprite.cpp  Sprite.h
src/entities/text/: TextBlock.cpp  TextBlock.h
src/entities/visitors/: Visitor.h
src/entities/visitors/drawVisitor/: DrawVisitor.cpp  DrawVisitor.h
src/entities/visitors/drawingVisitor/: DrawingVisitor.cpp  DrawingVisitor.h
src/entities/visitors/resizingVisitor/: ScalingVisitor.cpp  ScalingVisitor.h
src/entities/visitors/scaleWHVisitor/: ScaleWHVisitor.cpp  ScaleWHVisitor.h
src/entities/visitors/scaleXYVisitor/: ScaleXYVisitor.cpp  ScaleXYVisitor.h
src/entities/visitors/scalingWHVisitor/: ScalingWHVisitor.cpp  ScalingWHVisitor.h
src/entities/visitors/scalingXYVisitor/: ScalingXYVisitor.cpp  ScalingXYVisitor.h
src/interfaces/: CanResize.h  Clickable.h  Drawable.h  Entity.h  Hoverable.h  ImageTexture.h  Repositionable.h  Resizable.h  Rotatable.h  Savable.h  Text.h
src/screen/: Screen.cpp  Screen.h
src/text/: TextBlock.cpp  TextBlock.h
src/viewport/: Viewport.cpp  Viewport.h
src/virgil/: Virgil.cpp  Virgil.h
